# setuptools-gettext

./: .gitignore  MANIFEST.in  PKG-INFO  README.md  disperse.conf  disperse.toml  pyproject.toml  setup.cfg  setuptools_gettext.py
.github/: dependabot.yml
.github/workflows/: python-distributions.yml  pythontest.yml
debian/: .gitignore  changelog  control  copyright  rules  watch
debian/patches/: fix-default-language  series
debian/source/: options
debian/upstream/: metadata  signing-key.asc
example/: .gitignore  README.md  pyproject.toml
example/hallowereld/: __init__.py  __main__.py
example/po/: hallowereld.pot  nl.po
setuptools_gettext/: __init__.py  catalog.py  install_layout.py
setuptools_gettext.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_example.py  test_setuptools_gettext.py
