[metadata]
name = setuptools-gettext
version = attr:setuptools_gettext.__version__
maintainer = Breezy Developers
maintainer_email = breezy-core@googlegroups.com
license = GPLv2 or later
description = Setuptools gettext extension plugin
keywords = distutils, setuptools, gettext
url = https://github.com/breezy-team/setuptools-gettext
long_description = file:README.md
long_description_content_type = text/markdown
classifiers = 
	Topic :: Software Development :: Version Control
	License :: OSI Approved :: Apache Software License
	Intended Audience :: Developers
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Operating System :: POSIX
	Operating System :: MacOS :: MacOS X
	Operating System :: Microsoft :: Windows

[options]
packages = setuptools_gettext
zip_safe = True
install_requires = setuptools>=46.1
setup_requires = setuptools>=46.1
python_requires = >=3.6

[options.entry_points]
distutils.commands = 
	build_mo = setuptools_gettext:build_mo

[mypy]
ignore_missing_imports = True

[flake8]
exclude = build

[egg_info]
tag_build = 
tag_date = 0

